--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github test</title>
     <style>
-        .d1{
+        .d{
             width: 100px;
             height: 100px;
             border:1px solid #ccc;
             border-radius:10px;
             margin:auto;
         }
+        .p1{
+            width:15px;
+            height: 15px;
+            border-radius: 50%;
+            background-color: red;
+            margin:auto;
+            line-height: 100px;
+        }
     </style>
 </head>
 <body>
-    <div class="d1"></div>
+    <div class="d">
+        <div class="p1"></div>
+    </div>
+
 </body>
 </html>
