--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             border:1px solid #ccc;
             border-radius:10px;
             margin:auto;
+            display:flex;
+            align-items:center;
+            justify-content: center;
         }
         .p1{
             width:15px;
@@ -18,7 +21,6 @@
             border-radius: 50%;
             background-color: red;
             margin:auto;
-            line-height: 100px;
         }
     </style>
 </head>
