--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
             background-color: red;
             margin:auto;
         }
+        .p2{
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background-color: balck;
+            margin:auto;
+        }
     </style>
 </head>
 <body>
     <div class="d">
         <div class="p1"></div>
+    </div>
+    <div class="d">
+        <div class="p2"></div>
+        <div class="p2"></div>
     </div>
 
 </body>
