--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             width: 15px;
             height: 15px;
             border-radius: 50%;
-            background-color: balck;
+            background-color: black;
             }
     </style>
 </head>
