--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             align-items:center;
             justify-content: center;
         }
+        .p1-center{
+            align-items:center;
+            justify-content:center;
+        }
+        .p2-center{
+            display:flex;
+            flex-flow:column;
+            justify-content: space-evenly;
+        }
         .p1{
             width:15px;
             height: 15px;
@@ -31,10 +40,10 @@
     </style>
 </head>
 <body>
-    <div class="d">
+    <div class="d p1-center">
         <div class="p1"></div>
     </div>
-    <div class="d">
+    <div class="d p2-center">
         <div class="p2"></div>
         <div class="p2"></div>
     </div>
